--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,7 +1,9 @@
-* {
+* .app{
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  
+  height: 100%;
+  width: 100%;
+  background-color: rgb(49, 49, 49);
 }
 
