--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -1,10 +1,11 @@
 .NavbarItems{
-    background: linear-gradient(90deg, rgb(110, 94, 254) 0%, rgba(73, 63,252,1) 100%);
-    height: 80px; 
+    background: linear-gradient(90deg, rgb(36, 36, 36) 0%, rgb(83, 83, 83) 100%);
+    height: 9%;
     display: flex;
     justify-content: center;
     align-content: center;
     font-size: 1.2rem;
+    
 }
 
 .navbar-logo{
@@ -26,7 +27,7 @@
     grid-gap: 10px;
     list-style: none;
     text-align: center;
-    width: 70vw;
+    width: 100%;
     justify-content: end;
     margin-right: 2rem;
     margin-top: 0.7rem;
@@ -36,24 +37,26 @@
     color: white;
     text-decoration: none;
     padding: 0.5rem 1rem;
+    
 }
 
 .nav-links:hover{
-    background-color: lightblue;
+    background-color: rgb(86, 86, 86);
     border-radius: 4px; 
     transition: all 0.2s ease-out;
 }
 
 .menuItem {
     font-size: 24px;
-    border-radius: 16px;
-    padding: 12px 22px;
-    background-color: rgb(117, 108, 238);
-    border-color: lightblue;
+    margin-left: -12px;
+    padding: 18px 62px;
+    background-color: rgb(56, 56, 56);
+    border-left-color: lightblue;
+    border-right-color: lightblue;
     color: white;
 }
 .menuItem:hover{
-    background-color: lightblue;
+    background-color: rgb(86, 86, 86);
 }
 .menuItem:focus{
     outline: none;
